# Review_Skill

./: .env.example  PLAN.md  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  services.py
api/: index.py
routes/: api.py  public.py
services/: __init__.py  google_places.py  review.py  sms.py
static/: dashboard.html  send.html  style.css
templates/: base.html  dashboard.html  landing.html  send.html  setup.html
tests/: test_core.py
