[project]
name = "review-skill"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-multipart",
    "python-dotenv",
    "anthropic",
    "pyngrok",
    "requests",
    "twilio",
]

[tool.pytest.ini_options]
pythonpath = ["."]
